RESOLVED FIXED173091
Clients of the WK2 C-API don't have their mediaContentTypesRequiringHardwareSupport setting initialized correctly.
https://bugs.webkit.org/show_bug.cgi?id=173091
Summary Clients of the WK2 C-API don't have their mediaContentTypesRequiringHardwareS...
Jer Noble
Reported 2017-06-07 22:52:40 PDT
Clients of the WK2 C-API don't have their mediaContentTypesRequiringHardwareSupport setting initialized correctly.
Attachments
Patch (8.90 KB, patch)
2017-06-07 22:58 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2017-06-07 22:58:49 PDT
WebKit Commit Bot
Comment 2 2017-06-08 10:51:50 PDT
Comment on attachment 312281 [details] Patch Clearing flags on attachment: 312281 Committed r217935: <http://trac.webkit.org/changeset/217935>
WebKit Commit Bot
Comment 3 2017-06-08 10:51:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.